--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,17 +4,8 @@
     <string name="app_name">Dublin Bus App</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="rgb">RGB</string>
-    <string name="hls">HLS</string>
-    <string name="yuv">YUV</string>
-    <string name="image">Test Image</string>
-    <string name="desc">~image description~</string>
-    <string name="takepic">Take Photo</string>
-    <string name="title_activity_my_camera">MyCameraActivity</string>
-    <string name="photo">Take Photo</string>
-    <string name="button">Button</string>
-    <string name="greyscale">Greyscale</string>
     <string name="stop">Enter a stop number:</string>
     <string name="search">Search</string>
+    <string name="back">Back</string>
 
 </resources>
